add cycle check